<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Music</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_time">00:00</string>
    <string name="title_activity_song_list">SongListActivity</string>
    <string name="image">图片</string>
    <string name="line">分割线</string>
    <string name="title_activity_contain_fragment">ContainFragmentActivity</string>
    <string name="firstFragment">展示乐库的Fragment</string>
    <string name="secondFragment">展示本地音乐的Fragment</string>
    <string name="online">乐库</string>
    <string name="local">我的音乐</string>
    <string name="local_music">本地音乐</string>
    <string name="del_Btn">删除</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">搜索音乐、歌手</string>
    <string name="search_btn">确定</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="enterApp">进入</string>
    <string name="blur_tv">模糊查询结果</string>
    <string name="title_activity_search_info">SearchInfoActivity</string>
    <string name="songName">歌曲名</string>
    <string name="singerName">歌手名</string>

</resources>
