<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/common_topbar_high"
    android:gravity="center"
    android:background="@color/red"
    android:minHeight="@dimen/common_topbar_high" >

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:scaleType="center"
        android:background="@drawable/mainview_top_back_natural"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_toRightOf="@+id/back"
        android:layout_toLeftOf="@+id/split_line"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/local_music" />
        
    </LinearLayout>
    
    <ImageView
        android:id="@+id/split_line" 
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:background="@color/red"
        android:contentDescription="@string/line"
        android:layout_alignParentRight="true"
        android:layout_marginRight="64dp" />

</RelativeLayout>