<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp" >

    <ImageView
        android:id="@+id/music_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@drawable/albumart_mp_unknown_list" />

    <TextView
        android:id="@+id/notif_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_alignTop="@+id/music_image"
        android:layout_toRightOf="@+id/music_image"
        android:gravity="left"
        android:singleLine="true"
        android:text="@string/songName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/notif_singer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/notif_name"
        android:layout_toRightOf="@+id/music_image"
        android:gravity="left"
        android:text="@string/singerName" />

    <ImageView
        android:id="@+id/notif_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:background="@drawable/pre"
        android:layout_alignBottom="@+id/music_image"
        android:layout_toRightOf="@+id/music_image"
        android:contentDescription="@string/image" />

    <ImageView
        android:id="@+id/notif_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:background="@drawable/pause"
        android:layout_alignBottom="@+id/music_image"
        android:layout_toRightOf="@+id/notif_previous"
        android:contentDescription="@string/image" />

    <ImageView
        android:id="@+id/notif_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:background="@drawable/next"
        android:layout_toRightOf="@+id/notif_pause"
        android:layout_alignBottom="@+id/music_image"
        android:contentDescription="@string/image" />

</RelativeLayout>